chore: reorganize input section css in one file and fixing bugs with z-index, and fixing on top header and input section

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -6,6 +6,9 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  position: sticky;
+  top: 0;
+  z-index: 5;
 }
 
 .logoContainer {
@@ -44,7 +47,6 @@ nav {
   justify-content: space-around;
   align-items: center;
   margin-right: 20px;
-  z-index: 2;
 }
 
 .listItem {
